Transfers names to resources, cleans code

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,39 @@
     <string name="local_button_text">Offline use</string>
     <string name="training_tab_button">Training</string>
     <string name="running_tab_button">Running</string>
+    <string name="training_exercises_fragment_name">Training exercises</string>
+    <string name="create_training_fragment_name">Create training</string>
+    <string name="training_dates_fragment_name">Training dates</string>
+    <string name="training_settings_fragment_name">Training settings</string>
+    <string name="create_exercise_fragment_name">Create exercise</string>
+    <string name="update_exercise_fragment_name">Update exercise</string>
+    <string name="create_running_fragment_name">Create running</string>
+    <string name="update_running_fragment_name">Update running</string>
+    <string name="date_chooser_title">Date</string>
+    <string name="enter_running_name_toast">Enter running name</string>
+    <string name="running_created_toast">Running successfully created!</string>
+    <string name="running_updated_toast">Running successfully updated!</string>
+    <string name="create_date_fragment">Create date</string>
+    <string name="exercises_fragment">Exercises</string>
+    <string name="enter_training_name_toast">Enter training name</string>
+    <string name="training_created_toast">Training created!</string>
+    <string name="training_updated_toast">Training updated!</string>
+    <string name="delete_button_text">DELETE</string>
+    <string name="cancel_button_text">CANCEL</string>
+    <string name="delete_warning">Delete this record from database (cannot be undone)?</string>
+    <string name="select_date_button_text">Select date</string>
+    <string name="confirm_date_button_text">Confirm date</string>
+    <string name="exercise_hint_text">Exercise name</string>
+    <string name="comments_hint_text">Comments</string>
+    <string name="repetitions">reps</string>
+    <string name="weight">weight</string>
+    <string name="set_1">Set 1</string>
+    <string name="set_2">Set 2</string>
+    <string name="set_3">Set 3</string>
+    <string name="set_4">Set 4</string>
+    <string name="set_5">Set 5</string>
+    <string name="running_distance">Running distance, km</string>
+    <string name="speed">Speed, km/h</string>
+    <string name="running_time">Running time, minutes</string>
+    <string name="calories_lost">Calories lost</string>
 </resources>
