--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">TriaryApp</string>
+    <string name="save">Сохранить</string>
     <string name="sign_in_button_text">Sign in</string>
     <string name="local_button_text">Offline use</string>
     <string name="training_tab_button">Training</string>
