Minor design changes for better view
fix #6

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -33,7 +33,7 @@
     <string name="comments_hint_text">Комментарий</string>
     <string name="repetitions">повт</string>
     <string name="weight">вес</string>
-    <string name="set_1">Подоход 1</string>
+    <string name="set_1">Подход 1</string>
     <string name="set_2">Подход 2</string>
     <string name="set_3">Подход 3</string>
     <string name="set_4">Подход 4</string>
