--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,8 +5,8 @@
     <string name="date_text_view_hint">No date is chosen</string>
     <string name="sign_in_button_text">Sign in</string>
     <string name="local_button_text">Offline use</string>
-    <string name="training_tab_button">Training</string>
-    <string name="running_tab_button">Running</string>
+    <string name="training_tab_button">Power</string>
+    <string name="running_tab_button">Cardio</string>
     <string name="training_list_fragment_name">Training list</string>
     <string name="training_exercises_fragment_name">Training exercises</string>
     <string name="create_training_fragment_name">Create training</string>
@@ -43,4 +43,5 @@
     <string name="speed">Speed, km/h</string>
     <string name="running_time">Running time, minutes</string>
     <string name="calories_lost">Calories lost</string>
+    <string name="main_screen_fragment_workouts">Workouts</string>
 </resources>
