Adds layouts and resources for new workflow
refs #18

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -45,4 +45,9 @@
     <string name="calories_lost">Потеряно калорий</string>
     <string name="main_screen_fragment_workouts">Тренировки</string>
     <string name="settings_profile_title">Профиль</string>
+
+    <!-- Детали тренировки -->
+    <string name="training_detail_exercise_list">Упражнения</string>
+    <string name="training_detail_exercise_pack_list">Наборы упражнений</string>
+    <string name="training_detail_dates_list">Даты тренировки</string>
 </resources>
