--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -46,8 +46,24 @@
     <string name="main_screen_fragment_workouts">Тренировки</string>
     <string name="settings_profile_title">Профиль</string>
 
+    <!--Кнопки диалога-->
+    <string name="dialog_ok">Ок</string>
+    <string name="dialog_create">Создать</string>
+    <string name="dialog_cancel">Отмена</string>
+
+    <!--Список силовых тренировок-->
+    <string name="training_list_training_add_button">Добавить тренировку</string>
+    <string name="training_list_training_creation_dialog_message">Создать тренировку</string>
+    <string name="training_list_training_creation_dialog_name_input_hint">Название тренировки</string>
+    <string name="training_list_training_creation_dialog_description_input_hint">Описание тренировки</string>
+
     <!-- Детали тренировки -->
     <string name="training_detail_exercise_list">Упражнения</string>
     <string name="training_detail_exercise_pack_list">Наборы упражнений</string>
     <string name="training_detail_dates_list">Даты тренировки</string>
+
+    <!-- Список упражнений -->
+    <string name="training_detail_exercise_add_button">Добавить упражнение</string>
+    <string name="training_detail_exercise_creation_dialog_message">Создать упражнение</string>
+    <string name="training_detail_exercise_creation_dialog_name_input_hint">Exercise name</string>
 </resources>
