--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -48,8 +48,10 @@
 
     <!-- Кнопки диалога -->
     <string name="dialog_ok">Ок</string>
-    <string name="dialog_create">Создать</string>
-    <string name="dialog_cancel">Отмена</string>
+
+    <!-- Действия -->
+    <string name="action_create">Создать</string>
+    <string name="action_cancel">Отмена</string>
 
     <!-- Список силовых тренировок -->
     <string name="training_list_training_add_button">Добавить тренировку</string>
@@ -57,7 +59,9 @@
     <string name="training_list_training_creation_dialog_name_input_hint">Название тренировки</string>
     <string name="training_list_training_creation_dialog_description_input_hint">Описание тренировки</string>
 
+    <!---->
     <!-- Детали тренировки -->
+    <!---->
     <string name="training_detail_exercise_list">Упражнения</string>
     <string name="training_detail_exercise_pack_list">Наборы упражнений</string>
     <string name="training_detail_dates_list">Даты тренировки</string>
@@ -69,5 +73,8 @@
 
     <!-- Список наборов упражнений -->
     <string name="training_detail_exercise_pack_add_button">Добавить набор</string>
+
+    <!-- Список дат -->
+    <string name="training_detail_date_add_button">Добавить дату</string>
 
 </resources>
