--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,8 +48,10 @@
 
     <!-- Dialog buttons -->
     <string name="dialog_ok">Ok</string>
-    <string name="dialog_create">Create</string>
-    <string name="dialog_cancel">Cancel</string>
+
+    <!-- Actions -->
+    <string name="action_create">Create</string>
+    <string name="action_cancel">Cancel</string>
 
     <!-- Power training list -->
     <string name="training_list_training_add_button">Add training</string>
@@ -57,7 +59,9 @@
     <string name="training_list_training_creation_dialog_name_input_hint">Training name</string>
     <string name="training_list_training_creation_dialog_description_input_hint">Training description</string>
 
+    <!---->
     <!-- Training details -->
+    <!---->
     <string name="training_detail_exercise_list">Exercises</string>
     <string name="training_detail_exercise_pack_list">Packs of exercises</string>
     <string name="training_detail_dates_list">Training dates</string>
@@ -69,5 +73,8 @@
 
     <!-- Exercise pack list -->
     <string name="training_detail_exercise_pack_add_button">Add pack</string>
+
+    <!-- Dates list -->
+    <string name="training_detail_date_add_button">Add date</string>
 
 </resources>
