Fixes DAOs, entities, adds kotlin directory and base classes for compose
refs #18

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <!-- Exercise pack list -->
     <string name="training_detail_exercise_pack_add_button">Add pack</string>
 
-    <!-- Dates list -->
+    <!-- Day list -->
     <string name="training_detail_date_add_button">Add date</string>
 
 </resources>
