--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -70,6 +70,8 @@
     <string name="training_detail_exercise_add_button">Добавить упражнение</string>
 
     <!-- Упражнение -->
+    <string name="training_detail_exercise_created_toast">Упражнение успешно создано!</string>
+    <string name="training_detail_exercise_updated_toast">Упражнение успешно обновлено!</string>
     <string name="training_detail_exercise_create_exercise">Создать упражнение</string>
     <string name="training_detail_exercise_update_exercise">Обновить упражнение</string>
     <string name="training_detail_exercise_name_hint">Название упражнения</string>
