Adds top app bar
refs #18

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -62,6 +62,7 @@
     <!---->
     <!-- Детали тренировки -->
     <!---->
+    <string name="training_details">Training details</string>
     <string name="training_detail_exercise_list">Упражнения</string>
     <string name="training_detail_exercise_pack_list">Наборы упражнений</string>
     <string name="training_detail_dates_list">Даты тренировки</string>
